Bug 16065 - Use Font Awesome icons in dialog when duplicate patron is suspected
This patch updates the new patron template to use Font Awesome icons in
the dialog which is shown when a duplicate patron is suspected.

The patch modifies the CSS rules for a dialog button with "white-space:
pre-line" so that line breaks in button text markup are treated as line
breaks on display. Allowing the text to wrap prevents the buttons from
being too wide and stacking one below the other.

To test, apply the patch and go to Patrons -> New patron.

- Attempt to save a new patron with details matching an existing patron
  in order to trigger the duplicate patron warning.
- Confirm that the resulting dialog is styled correctly.
- Confirm the behavior of both the 'Edit existing' and 'Save as new'
  buttons.

Followed test plan, works as expected.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1203,6 +1203,7 @@ div.alert strong {
     border-left-color: #666;
     margin : .4em;
     padding : .4em;
+    white-space: pre-line;
 }
 
 .dialog button:hover {
